# smart_agent

./: .env.example  README.md  interview_questions.md.resolved  pyproject.toml  requirements.txt  架构分析.md  规划报告.md  问题报告.md
.agents/rules/: guide.md
benchmarks/: requirements-eval.txt
benchmarks/adapters/: base_adapter.py  bfcl_adapter.py  gaia_adapter.py
benchmarks/runners/: run_bfcl.py  run_gaia.py
demo_notes/: notes.json
examples/: basic_demo.py  deep_research_demo.py  demo_full_pipeline.py  demo_modularity.py  memory_demo.py  rag_demo.py
src/smart_agent/: __init__.py  cli.py
src/smart_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/smart_agent/agents/: core.py  types.py
src/smart_agent/base/: __init__.py  tool.py
src/smart_agent/deep_research/: __init__.py  agent.py  models.py  prompts.py
src/smart_agent/evaluation/: __init__.py  metrics.py
src/smart_agent/executors/: local_python.py  remote.py
src/smart_agent/llm/: __init__.py  chat.py  models.py
src/smart_agent/mcp/: client.py
src/smart_agent/memory/: __init__.py  base_memory.py  core.py  memory_manager.py  memory_tool.py
src/smart_agent/monitoring/: core.py
src/smart_agent/rag/: __init__.py  advanced_search.py  document_loader.py  embeddings.py  pipeline.py  reranker.py  vector_store.py
src/smart_agent/serialization/: core.py
src/smart_agent/tools/: __init__.py  core.py  default.py  note_tool.py  terminal_tool.py  validation.py  vision_web_browser.py  web_search.py
src/smart_agent/ui/: __init__.py  gradio_ui.py
tests/: __init__.py  test_imports.py
(+9 files in other folders)
